# advent-of-code

./: Makefile
.githooks/: pre-commit  pre-push
crates/common/: Cargo.toml
crates/common/src/error/: mod.rs
crates/common/src/math/: mod.rs
crates/day01/: Cargo.toml  README.md
crates/day01/src/: main.rs
crates/day01/src/depth/: mod.rs
crates/day02/: Cargo.toml  README.md
crates/day02/src/: main.rs
crates/day02/src/submarine/: mod.rs
crates/day03/: Cargo.toml  README.md
crates/day03/src/: main.rs
crates/day03/src/repo/: in_memory_repo.rs  mod.rs
crates/day03/src/ship_computer/: diagnostic.rs  mod.rs
crates/day03/src/util/: mod.rs
crates/day04/: Cargo.toml
crates/day04/src/: main.rs
crates/day04/src/bingo/: board.rs  board_reader.rs  mod.rs
