[package]
name = "day04"
version = "0.1.0"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

structopt = { version = "0.3", default-features = false }
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
